研发环境/仓库/前端仓库/verdaccio/参考文档/verdaccio-network.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: verdaccio
  namespace: registry
subsets:
  - addresses:
      - ip: 172.30.1.35
    ports:
      - port: 88
---
apiVersion: v1
kind: Service
metadata:
  name: verdaccio
  namespace: registry
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 88
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: verdaccio
  namespace: registry
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: verdaccio-nodejs-registry.local.
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: verdaccio
                port:
                  number: 80
